Update bug where controls do not switch to dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
+  overflow-y: hidden;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -66,6 +67,7 @@ div.title {
 
 section {
   width: 80%;
+  height: 100%;
   position: relative;
   z-index: 10;
   display: flex;
